2004/04/05 09:50 (-0400) muppetman

	* xs/GtkTreeStore.xs: patch from Thierry Vignaud corrects indentation
	on an xsub to appease validators.

2004/04/04 19:36 (+0200) kaffeetisch

	* xs/PangoFont.xs: Remove an unused variable to hush a compiler
	warning.

	Merge from the stable-1-04 branch:

	* t/Gdk.t: Don't fail the keyboard_grab test if there already is
	an active keyboard grab.

	* t/PangoTabs.t: Test new and new_with_positions instead of two
	times new.

	* xs/GtkStyle.xs: Use a =for object directive to put
	Gtk2::draw_insertion_cursor into the Gtk2::Style man page (instead
	of overwriting Gtk2).

2004/04/04 01:09 (-0500) muppetman

	* t/PangoContext.t, t/PangoFont.t, xs/PangoContext.xs,
	xs/PangoFont.xs: bind and test Gtk2::Pango::Context::list_families,
	Gtk2::Pango::FontFamily::get_name,
	Gtk2::Pango::FontFamily::is_monospace,
	Gtk2::Pango::FontFamily::list_faces, Gtk2::Pango::FontFace::describe,
	Gtk2::Pango::FontFace::get_face_name, and
	Gtk2::Pango::FontFace::list_sizes.

2004/04/03 22:27 (+0200) kaffeetisch

	* t/01.GtkWindow.t: Fix the TODO by allowing both, TRUE and FALSE,
	as the return value of is_active and has_toplevel_focus.

2004/04/03 21:30 (+0200) kaffeetisch

	A t/GdkInput.t
	A xs/GdkInput.xs
	* MANIFEST: Bind and test GdkInput.

	* t/Gdk.t
	* xs/Gdk.xs: Bind and test init, init_check, and parse_args.

	* t/GdkEvent.t
	* xs/GdkEvent.xs: Add and test the ability to change the device with
	Gtk2::Gdk::Event::Motion::device,
	Gtk2::Gdk::Event::Button::device,
	Gtk2::Gdk::Event::Scroll::device, and
	Gtk2::Gdk::Event::Proximity::device.

	* gdk.typemap
	* maps-2.0: Use a custom typemap for Gtk2::Gdk::Keymap so you can
	use Gtk2::Gdk::Keymap->method instead of $keymap->method to get
	the default keymap.

	* t/GdkKeys.t
	* xs/GdkKeys.xs: Bind and test
	Gtk2::Gdk::Keymap::get_entries_for_keyval and
	::get_entries_for_keycode.

	A t/GdkPixmap.t
	* MANIFEST
	* xs/GdkPixmap.xs: Bind and test lookup, lookup_for_display,